made changes to dockerfile