@@ -1,4 +1,4 @@
-#Stage 1
+# #Stage 1
 FROM maven:3.6.0-jdk-8-alpine AS build
 
 WORKDIR /tmp
@@ -11,11 +11,19 @@ COPY src/ ./src
 
 RUN mvn -B -DskipTests clean package
 
-#Stage 2
+# #Stage 2
+# FROM openjdk:8-jdk-alpine
+# WORKDIR /tmp
+# COPY target/*.jar kwetter.jar
+# ENTRYPOINT ["java", "-jar", "kwetter.jar"]
+
+
 FROM openjdk:8-jdk-alpine
 WORKDIR /app
 COPY --from=build /tmp/target/*.jar ./kwetter.jar
 ENTRYPOINT ["java", "-jar", "kwetter.jar"]
+
+CMD java -XX:+UnlockExperimentalVMOptions -XX:+UseCGroupMemoryLimitForHeap -XX:+UseG1GC -verbose:gc -jar target/kwetter.jar
 
 #VOLUME /tmp
 #
